@@ -24,14 +24,12 @@ Alien                                          = 0.95
 Alien::Alien                                   = 0.02
 Alien::autoconf                                = 0.07
 Alien::automake                                = 0.11
-Alien::Autotools                               = 1.02
-Alien::Base::ModuleBuild                       = 0.042
+Alien::Autotools                               = 1.03
+Alien::Base::ModuleBuild                       = 0.043
 Alien::bison                                   = 0.19
-Alien::Build                                   = 0.95
+Alien::Build                                   = 1.00
 Alien::Build::Git                              = 0.05
 Alien::Build::MB                               = 0.03
-Alien::Build::Plugin::Build::CMake             = 0.02
-Alien::Build::Plugin::Build::Make              = 0.02
 Alien::Build::Plugin::Decode::SourceForge      = 0.01
 Alien::Build::Plugin::Fetch::Cache             = 0.04
 Alien::Build::Plugin::Probe::GnuWin32          = 0.59
@@ -52,7 +50,7 @@ Alien::Libarchive                              = 0.28
 Alien::Libarchive::Installer                   = 0.15
 Alien::Libarchive3                             = 0.28
 Alien::Libbz2                                  = 0.22
-Alien::libtool                                 = 0.07
+Alien::libtool                                 = 0.09
 Alien::libtool24                               = 0.05
 Alien::LibYAML                                 = 2.01
 Alien::Libxml2                                 = 0.02
@@ -65,21 +63,20 @@ Alien::Nettle                                  = 0.04
 Alien::patch                                   = 0.12
 Alien::pkgconf                                 = 0.10
 Alien::Role::Alt                               = 0.03
-Alien::Role::Dino                              = 0.03
+Alien::Role::Dino                              = 0.05
 Alien::xz                                      = 0.06
 ;Alt::Alien::FFI::System                       = 0.16
 ;Alt::ExtUtils::PkgConfig::PLICEASE            = 1.15
 ;Alt::FFI::libffi                              = 0.01
 AnyEvent::Finger                               = 0.10
 AnyEvent::FTP                                  = 0.14
-AnyEvent::Git::Wrapper                         = 0.10
 AnyEvent::Ident                                = 0.07
 AnyEvent::Open3::Simple                        = 0.86
 AnyEvent::WebSocket::Client                    = 0.41
 App::af                                        = 0.14
 App::cpangitify                                = 0.17
 App::pwhich                                    = 1.14
-App::RegexFileUtils                            = 0.07
+App::RegexFileUtils                            = 0.08
 App::spaceless                                 = 0.07
 Archive::Ar::Libarchive                        = 2.06
 Archive::Libarchive::Any                       = 0.0900
@@ -98,8 +95,7 @@ Dist::Zilla::Plugin::CommentOut                = 0.01
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
 Dist::Zilla::Plugin::InsertExample             = 0.09
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
-Dist::Zilla::Plugin::jQuery                    = 0.05
-Dist::Zilla::Plugin::MathInt64                 = 0.09
+Dist::Zilla::Plugin::MathInt64                 = 0.10
 Dist::Zilla::Plugin::OurPkgVersion             = 0.12
 Dist::Zilla::Plugin::Template::Tiny            = 0.04
 Dist::Zilla::Plugin::Test::Version             = 1.09
@@ -143,6 +139,7 @@ Shell::Config::Generate                        = 0.26
 Shell::Guess                                   = 0.07
 String::Template                               = 0.19
 Term::EditLine                                 = 0.11
+Test::Alien::CPP                               = 0.96
 Test::CChecker                                 = 0.08
 Test::Clustericious::Blocking                  = 0.05
 Test::Clustericious::Cluster                   = 0.37
